[package]
name = "actix-buttplug"
version = "0.1.0"
authors = ["Kitty <very.gay.kitten@gmail.com>"]
edition = "2021"
description = "A library to integrate buttplug.io with actix's actor models."
readme = "README.md"
repository = "https://github.com/GayKitten/actix-buttplug"
homepage = "https://github.com/GayKitten/actix-buttplug"
keywords = ["actix", "buttplug", "buttplug.io", "websockets"]
categories = ["api-bindings", "asynchronous", "concurrency", "web-programming::websocket"]
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["actix-web"]
actix-web = ["dep:actix-web-actors", "dep:actix-web", "dep:tokio", "dep:tokio-scoped"]

[dependencies]
actix = "0.13.0"
actix-rt = "2.7.0"
buttplug = "5.1.10"
delegate = "0.7.0"
futures = "0.3.21"
log = "0.4.17"
thiserror = "1.0.31"

# dependencies for the actix transport (actix-ws-transport)
actix-web-actors = { version = "4.1.0", optional = true }
actix-web = { version = "4.1.0", optional = true }
# use same version as buttplug
tokio = { version = "1.17.0", optional = true }
tokio-scoped = { version = "0.2.0", optional = true }
